RAS-254: rearrange packages

--- a/app/views/govuk_wrapper.scala.html
+++ b/app/views/govuk_wrapper.scala.html
@@ -1,4 +1,4 @@
-@(appConfig: uk.gov.hmrc.rasfrontend.AppConfig,
+@(appConfig: AppConfig,
   title: String,
   mainClass: Option[String] = None,
   mainDataAttributes: Option[Html] = None,
