--- a/app/views/error_template.scala.html
+++ b/app/views/error_template.scala.html
@@ -8,4 +8,4 @@
   <p>@message</p>
 }
 
-@govuk_wrapper(appConfig = uk.gov.hmrc.rasfrontend.FrontendAppConfig, title = pageTitle, contentHeader = Some(contentHeader), mainContent = mainContent)
+@govuk_wrapper(appConfig = FrontendAppConfig, title = pageTitle, contentHeader = Some(contentHeader), mainContent = mainContent)
