--- a/app/views/main_template.scala.html
+++ b/app/views/main_template.scala.html
@@ -17,7 +17,7 @@
 }
 
 
-@govuk_wrapper(appConfig = uk.gov.hmrc.rasfrontend.FrontendAppConfig,
+@govuk_wrapper(appConfig = FrontendAppConfig,
                title = title,
                mainClass = mainClass,
                bodyClasses = bodyClasses,
