--- a/app/views/hello_world.scala.html
+++ b/app/views/hello_world.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@()(implicit request: Request[_], messages: Messages))
+@()(implicit request: Request[_], messages: Messages)
 
 @views.html.main_template(title = "Hello from ras-frontend", bodyClasses = None) {
     <h1>Hello from ras-frontend !</h1>
