RAS-386: add legislation link

--- a/app/views/start_page.scala.html
+++ b/app/views/start_page.scala.html
@@ -22,7 +22,9 @@
 
     <p id="introduction-p1">@Messages("introduction.paragraph.1")</p>
     <p id="introduction-p2">@Messages("introduction.paragraph.2")</p>
-    <p id="introduction-p3">@Messages("introduction.paragraph.3")</p>
+    <p id="introduction-p3">@Messages("introduction.paragraph.3")
+     <a id="legislation" href="https://www.gov.uk/hmrc-internal-manuals/pensions-tax-manual/ptm044220">@Messages("legislation")</a>.
+    </p>
 
 
 }
