RAS-386: Add more content to start page

--- a/app/views/start_page.scala.html
+++ b/app/views/start_page.scala.html
@@ -26,5 +26,23 @@
      <a id="legislation" href="https://www.gov.uk/hmrc-internal-manuals/pensions-tax-manual/ptm044220">@Messages("legislation")</a>.
     </p>
 
+    <h2 id="usage-header">@Messages("usage.header")</h2>
+    <p id="usage-subheader">@Messages("usage.subheader")</p>
+    <ul>
+      <li id="usage-bullet-1">@Messages("usage.bullet.1")</li>
+      <li id="usage-bullet-2">@Messages("usage.bullet.2")</li>
+    </ul>
+
+    <h2 id="what-you-need-header">@Messages("what.you.need.header")</h2>
+    <p id="what-you-need-subheader">@Messages("what.you.need.subheader")</p>
+    <ul>
+      <li id="what-you-need-bullet-1">@Messages("what.you.need.bullet.1")</li>
+      <li id="what-you-need-bullet-2">@Messages("what.you.need.bullet.2")</li>
+      <li id="what-you-need-bullet-3">@Messages("what.you.need.bullet.3")</li>
+      <li id="what-you-need-bullet-4">@Messages("what.you.need.bullet.4")</li>
+    </ul>
+    <p id="what-you-need-post-bullet">@Messages("what.you.need.post.bullet")
+      <a id="ras-guidance" href="https://www.google.uk/">@Messages("relief.at.source.guidance")</a>
+    </p>
 
 }
