RAS-386: Add link to member details page

--- a/app/views/start_page.scala.html
+++ b/app/views/start_page.scala.html
@@ -42,7 +42,11 @@
       <li id="what-you-need-bullet-4">@Messages("what.you.need.bullet.4")</li>
     </ul>
     <p id="what-you-need-post-bullet">@Messages("what.you.need.post.bullet")
-      <a id="ras-guidance" href="https://www.google.uk/">@Messages("relief.at.source.guidance")</a>
+      <a id="ras-guidance" href="https://www.gov.uk/guidance/pension-administrators-reclaim-tax-relief-using-relief-at-source">@Messages("relief.at.source.guidance")</a>
     </p>
+
+    <div>
+      <a href="@routes.MemberDetailsController.get" id="start">@Messages("start")</a>
+    </div>
 
 }
