--- a/app/views/main_template.scala.html
+++ b/app/views/main_template.scala.html
@@ -19,7 +19,8 @@
   contentHeader: Option[Html] = None,
   bodyClasses: Option[String] = None,
   mainClass: Option[String] = None,
-  scriptElem: Option[Html] = None)(mainContent: Html)(implicit request : Request[_], messages: Messages)
+  scriptElem: Option[Html] = None,
+  linkElement : Option[Html] = None)(mainContent: Html)(implicit request : Request[_], messages: Messages)
 
 @import uk.gov.hmrc.play.views.html.layouts
 
@@ -32,6 +33,9 @@
     }
 }
 
+@linkElement = {
+  <link rel="stylesheet" href='@controllers.routes.AssetsController.at("stylesheets/ras.css")'/>
+}
 
 @govuk_wrapper(appConfig = config.FrontendAppConfig,
                title = title,
@@ -41,5 +45,6 @@
                contentHeader = contentHeader,
                mainContent = layouts.article(mainContent),
                serviceInfoContent = serviceInfoContent,
-               scriptElem = scriptElem
+               scriptElem = scriptElem,
+               linkElement = Some(linkElement)
 )
