--- a/app/views/start_page.scala.html
+++ b/app/views/start_page.scala.html
@@ -18,7 +18,11 @@
 
 @main_template(title = Messages("start.page.title")) {
 
-    <h1 id="header">@Messages("start.page.header")</h1>
+<div class="grid-row">
+
+  <div class="column-full">
+
+    <h1 class="heading-xlarge" id="header">@Messages("start.page.header")</h1>
 
     <p id="introduction-p1">@Messages("introduction.paragraph.1")</p>
     <p id="introduction-p2">@Messages("introduction.paragraph.2")</p>
@@ -26,27 +30,31 @@
      <a id="legislation" href="https://www.gov.uk/hmrc-internal-manuals/pensions-tax-manual/ptm044220">@Messages("legislation")</a>.
     </p>
 
-    <h2 id="usage-header">@Messages("usage.header")</h2>
+
+    <h2 class="heading-large" id="usage-header">@Messages("usage.header")</h2>
     <p id="usage-subheader">@Messages("usage.subheader")</p>
-    <ul>
+    <ul class="list list-bullet">
       <li id="usage-bullet-1">@Messages("usage.bullet.1")</li>
       <li id="usage-bullet-2">@Messages("usage.bullet.2")</li>
     </ul>
 
-    <h2 id="what-you-need-header">@Messages("what.you.need.header")</h2>
+
+    <h2 class="heading-large" id="what-you-need-header">@Messages("what.you.need.header")</h2>
     <p id="what-you-need-subheader">@Messages("what.you.need.subheader")</p>
-    <ul>
+    <ul class="list list-bullet">
       <li id="what-you-need-bullet-1">@Messages("what.you.need.bullet.1")</li>
       <li id="what-you-need-bullet-2">@Messages("what.you.need.bullet.2")</li>
       <li id="what-you-need-bullet-3">@Messages("what.you.need.bullet.3")</li>
       <li id="what-you-need-bullet-4">@Messages("what.you.need.bullet.4")</li>
     </ul>
     <p id="what-you-need-post-bullet">@Messages("what.you.need.post.bullet")
-      <a id="ras-guidance" href="https://www.gov.uk/guidance/pension-administrators-reclaim-tax-relief-using-relief-at-source">@Messages("relief.at.source.guidance")</a>
+      <a id="ras-guidance" href="https://www.gov.uk/guidance/pension-administrators-reclaim-tax-relief-using-relief-at-source">@Messages("relief.at.source.guidance")</a>.
     </p>
 
-    <div>
-      <a href="@routes.MemberDetailsController.get" id="start">@Messages("start")</a>
-    </div>
+    <a class="button button--get-started" href="@routes.MemberDetailsController.get" role="button" id="start">@Messages("start.now")</a>
+
+  </div>
+
+</div>
 
 }
