--- a/app/views/start_page.scala.html
+++ b/app/views/start_page.scala.html
@@ -31,7 +31,7 @@
     </p>
 
 
-    <h2 class="heading-large" id="usage-header">@Messages("usage.header")</h2>
+    <h2 class="heading-medium" id="usage-header">@Messages("usage.header")</h2>
     <p id="usage-subheader">@Messages("usage.subheader")</p>
     <ul class="list list-bullet">
       <li id="usage-bullet-1">@Messages("usage.bullet.1")</li>
@@ -39,7 +39,7 @@
     </ul>
 
 
-    <h2 class="heading-large" id="what-you-need-header">@Messages("what.you.need.header")</h2>
+    <h2 class="heading-medium" id="what-you-need-header">@Messages("what.you.need.header")</h2>
     <p id="what-you-need-subheader">@Messages("what.you.need.subheader")</p>
     <ul class="list list-bullet">
       <li id="what-you-need-bullet-1">@Messages("what.you.need.bullet.1")</li>
