--- a/app/views/start_page.scala.html
+++ b/app/views/start_page.scala.html
@@ -14,47 +14,50 @@
  * limitations under the License.
  *@
 
-@()(implicit request: Request[_], messages: Messages)
+@()(implicit request: Request[_], context: config.RasContext, messages: Messages)
 
-@main_template(title = Messages("start.page.title")) {
+@import uk.gov.hmrc.play.views.html._
+@import uk.gov.hmrc.play.views.html.helpers._
 
-<div class="grid-row">
+@ras_main(title = Messages("start.page.title")) {
 
-  <div class="column-full">
+  <div class="grid-row">
 
-    <h1 class="heading-xlarge" id="header">@Messages("start.page.header")</h1>
+    <div class="column-full">
 
-    <p id="introduction-p1">@Messages("introduction.paragraph.1")</p>
-    <p id="introduction-p2">@Messages("introduction.paragraph.2")</p>
-    <p id="introduction-p3">@Messages("introduction.paragraph.3")
-     <a id="legislation" href="https://www.gov.uk/hmrc-internal-manuals/pensions-tax-manual/ptm044220">@Messages("legislation")</a>.
-    </p>
+      <h1 class="heading-xlarge" id="header">@Messages("start.page.header")</h1>
 
-
-    <h2 class="heading-medium" id="usage-header">@Messages("usage.header")</h2>
-    <p id="usage-subheader">@Messages("usage.subheader")</p>
-    <ul class="list list-bullet">
-      <li id="usage-bullet-1">@Messages("usage.bullet.1")</li>
-      <li id="usage-bullet-2">@Messages("usage.bullet.2")</li>
-    </ul>
+      <p id="introduction-p1">@Messages("introduction.paragraph.1")</p>
+      <p id="introduction-p2">@Messages("introduction.paragraph.2")</p>
+      <p id="introduction-p3">@Messages("introduction.paragraph.3")
+       <a id="legislation" href="https://www.gov.uk/hmrc-internal-manuals/pensions-tax-manual/ptm044220">@Messages("legislation")</a>.
+      </p>
 
 
-    <h2 class="heading-medium" id="what-you-need-header">@Messages("what.you.need.header")</h2>
-    <p id="what-you-need-subheader">@Messages("what.you.need.subheader")</p>
-    <ul class="list list-bullet">
-      <li id="what-you-need-bullet-1">@Messages("what.you.need.bullet.1")</li>
-      <li id="what-you-need-bullet-2">@Messages("what.you.need.bullet.2")</li>
-      <li id="what-you-need-bullet-3">@Messages("what.you.need.bullet.3")</li>
-      <li id="what-you-need-bullet-4">@Messages("what.you.need.bullet.4")</li>
-    </ul>
-    <p id="what-you-need-post-bullet">@Messages("what.you.need.post.bullet")
-      <a id="ras-guidance" href="https://www.gov.uk/guidance/pension-administrators-reclaim-tax-relief-using-relief-at-source">@Messages("relief.at.source.guidance")</a>.
-    </p>
+      <h2 class="heading-medium" id="usage-header">@Messages("usage.header")</h2>
+      <p id="usage-subheader">@Messages("usage.subheader")</p>
+      <ul class="list list-bullet">
+        <li id="usage-bullet-1">@Messages("usage.bullet.1")</li>
+        <li id="usage-bullet-2">@Messages("usage.bullet.2")</li>
+      </ul>
 
-    <a class="button button--get-started" href="@routes.MemberDetailsController.get" role="button" id="start">@Messages("start.now")</a>
+
+      <h2 class="heading-medium" id="what-you-need-header">@Messages("what.you.need.header")</h2>
+      <p id="what-you-need-subheader">@Messages("what.you.need.subheader")</p>
+      <ul class="list list-bullet">
+        <li id="what-you-need-bullet-1">@Messages("what.you.need.bullet.1")</li>
+        <li id="what-you-need-bullet-2">@Messages("what.you.need.bullet.2")</li>
+        <li id="what-you-need-bullet-3">@Messages("what.you.need.bullet.3")</li>
+        <li id="what-you-need-bullet-4">@Messages("what.you.need.bullet.4")</li>
+      </ul>
+      <p id="what-you-need-post-bullet">@Messages("what.you.need.post.bullet")
+        <a id="ras-guidance" href="https://www.gov.uk/guidance/pension-administrators-reclaim-tax-relief-using-relief-at-source">@Messages("relief.at.source.guidance")</a>.
+      </p>
+
+      <a class="button button--get-started" href="@routes.MemberDetailsController.get" role="button" id="start">@Messages("start.now")</a>
+
+    </div>
 
   </div>
-
-</div>
 
 }
