RAS-386: Update top banner content

--- a/app/views/govuk_wrapper.scala.html
+++ b/app/views/govuk_wrapper.scala.html
@@ -39,13 +39,12 @@
 }
 
 @headerNavLinks = {
-  <li><a id="homeNavHref" href="http://www.google.com"
-         data-journey-click="primary-navigation:Click:Home">Home</a></li>
+  <li><a id="homeNavHref" href="http://www.google.com" data-journey-click="primary-navigation:Click:Home"></a></li>
 }
 
 @insideHeader = {
     @uiLayouts.header_nav(
-      navTitle = Some("ras-frontend"),
+      navTitle = Some(""),
       navTitleLink = None,
       showBetaLink = false,
       navLinks = Some(headerNavLinks))
