RAS-392: Add a helper for messages

--- a/app/views/find_member_details.scala.html
+++ b/app/views/find_member_details.scala.html
@@ -19,7 +19,7 @@
 @import uk.gov.hmrc.play.views.html._
 @import uk.gov.hmrc.play.views.html.helpers._
 
-@ras_main(title = Messages("find.member.details")) {
+@ras_main(title = Messages("member.details.page.title")) {
 
 
 
