RAS-392: Add correct member details header

--- a/app/views/find_member_details.scala.html
+++ b/app/views/find_member_details.scala.html
@@ -21,6 +21,6 @@
 
 @ras_main(title = Messages("member.details.page.title")) {
 
-
+  <h1 id="header" class="heading-xlarge">@Messages("member.details.page.header")</h1>
 
 }
