--- a/app/views/helpers/rasInput.scala.html
+++ b/app/views/helpers/rasInput.scala.html
@@ -39,7 +39,7 @@
                     }
 }
 
-@labelId = {@if(elements.args.get('_id)){@elements.args.get('_id)_field}else{@elements.field.name.replaceAll("""[\.\[\]]""", "-")}}
+@labelId = {@if(elements.args.get('_id)){@elements.args.get('_id)_label}else{@elements.field.name.replaceAll("""[\.\[\]]""", "-")}}
 @hintId = {@if(elements.args.get('_id)){@elements.args.get('_id)_hint}}
 
 
