--- a/app/views/helpers/commonHelper.scala.html
+++ b/app/views/helpers/commonHelper.scala.html
@@ -19,7 +19,7 @@
 @errors.zipWithIndex.map { case (error, index) =>
 <span class="error-notification"
       role="tooltip"
-      data-journey="gmp:error:@field.name"
+      data-journey="ras:error:@field.name"
       id="@(field.name)-error-@index">
                     @Messages(error.message)
                 </span>
