--- a/public/stylesheets/ras.css
+++ b/public/stylesheets/ras.css
@@ -15,3 +15,15 @@
   display: inline-block;
   margin-bottom: 0px;
 }
+
+#dob_hint{
+  margin-top:0px;
+}
+
+#dob-legend{
+  margin-bottom:0px;
+}
+
+.form-hint{
+  margin-top:0px;
+}
