RAS-392: Add form validation for empty first name

--- a/app/views/member_details.scala.html
+++ b/app/views/member_details.scala.html
@@ -28,7 +28,7 @@
 
    <h1 id="header" class="heading-xlarge">@Messages("member.details.page.header")</h1>
 
-     @form(action = routes.MemberDetailsController.get) {
+     @form(action = routes.MemberDetailsController.post) {
 
        <div class="form-group">
 
