--- a/app/views/helpers/rasInput.scala.html
+++ b/app/views/helpers/rasInput.scala.html
@@ -46,11 +46,10 @@
 <div class="form-group">
 
     @if(errors.nonEmpty) {
-        <div class="@if(errors.nonEmpty || (parentElements.isDefined && parentElements.get.hasErrors)) {form-field--error}">
+        <div class="form-group @if(errors.nonEmpty || (parentElements.isDefined && parentElements.get.hasErrors)) {form-field--error}">
     }
 
     <label for="@labelFor" class="@labelClass" id="@labelId">
-        @commonHelper(field, errors)
         @if(labelHighlight) {<strong>}
         @if(elements.args.contains('_label)) {@elements.label}
         @if(labelHighlight) {</strong>}
@@ -60,6 +59,7 @@
         @if(elements.args.contains('_symbol)) {
             <span class="inline-fields">@elements.args.get('_symbol)</span>
         }
+        @commonHelper(field, errors)
     </label>
 
     <input @if(elements.args.contains('_type)){type="@elements.args.get('_type)"}else{type="text"}
