--- a/public/stylesheets/ras.css
+++ b/public/stylesheets/ras.css
@@ -27,3 +27,18 @@
 .form-hint{
   margin-top:0px;
 }
+
+.form-field--error{
+  border-left: 5px solid #b10e1e;
+}
+
+.form-field--error .error-notification{
+  font-weight: bold;
+  font-size:19px;
+  color: #b10e1e;
+}
+
+.form-group .form-field--error{
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
