--- a/app/views/ras_main.scala.html
+++ b/app/views/ras_main.scala.html
@@ -42,6 +42,7 @@
 }
 
 @linkElement = {
+  <link rel="stylesheet" href='@controllers.routes.AssetsController.at("stylesheets/govuk.css")'/>
   <link rel="stylesheet" href='@controllers.routes.AssetsController.at("stylesheets/ras.css")'/>
 }
 
