RAS-403: Rename customerdetails to memberdetails

--- a/app/views/member_details.scala.html
+++ b/app/views/member_details.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@(memberDetailsForm: Form[models.CustomerDetails])(implicit request: Request[_], context: config.RasContext, messages: Messages)
+@(memberDetailsForm: Form[models.MemberDetails])(implicit request: Request[_], context: config.RasContext, messages: Messages)
 
 @import uk.gov.hmrc.play.views.html._
 @import uk.gov.hmrc.play.views.html.helpers._
