RAS-403: Refactoring test suite

--- a/app/views/match_found.scala.html
+++ b/app/views/match_found.scala.html
@@ -25,5 +25,5 @@
   <h1>MATCH FOUND</h1>
   <h2>Well Done Mahi</h2>
 
-  <p>@currentYearResidencyStatus</p>
+  <p id="cy-residency-status">@currentYearResidencyStatus</p>
 }
