--- a/app/views/match_found.scala.html
+++ b/app/views/match_found.scala.html
@@ -14,17 +14,34 @@
  * limitations under the License.
  *@
 
-@(currentYearResidencyStatus: String, currentTaxYear: Int, nextTaxYear: Int)(implicit request: Request[_], context: config.RasContext, messages: Messages)
+@(currentYearResidencyStatus: String,
+  nextYearResidencyStatus: String,
+  currentTaxYear: String,
+  nextTaxYear: String,
+  name: String,
+  dob: String,
+  nino: String
+)(implicit request: Request[_], context: config.RasContext, messages: Messages)
 
 @import uk.gov.hmrc.play.views.html._
 @import uk.gov.hmrc.play.views.html.helpers._
 @import views.html.helpers._
 
-@ras_main(title = "Mahi Mahi Mahi Mahi") {
+@ras_main(title = Messages("match.found.page.title")) {
 
   <h1 id="cy-residency-status">@currentYearResidencyStatus</h1>
   <p id="this-tax-year">@Messages("this.tax.year")</p>
   <p id="tax-year-period">@Messages("tax.year.period", currentTaxYear, nextTaxYear)</p>
 
+  <p id="name-label">@Messages("name").capitalize</p>
+  <p id="name">@name</p>
 
+  <p id="dob-label">@Messages("dob").capitalize</p>
+  <p id="dob">@dob</p>
+
+  <p id="nino-label">@Messages("nino")</p>
+  <p id="nino">@nino</p>
+
+  <p id="nty-status-label">@Messages("status.for.next.tax.year", currentTaxYear, nextTaxYear)</p>
+  <p id="nty-status">@nextYearResidencyStatus</p>
 }
